--- a/app/src/main/res/layout/activity_atur_penugasan_.xml
+++ b/app/src/main/res/layout/activity_atur_penugasan_.xml
@@ -213,21 +213,18 @@
                     android:layout_gravity="center"
                     android:text="Jam Kerja" />
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
 
-                    <EditText
-                        android:id="@+id/et_mulaiKerja"
+                <TextView
+                    android:id="@+id/tv_mulaiKerja"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:drawableLeft="@drawable/icon_jam"
+                    android:text="Mulai" />
 
-                        android:hint="Mulai" />
-
-                </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -238,21 +235,17 @@
                     android:text="-"
                     android:textSize="20sp" />
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center">
 
-                    <EditText
-                        android:id="@+id/et_selesaiKerja"
+                <TextView
+                    android:id="@+id/tv_selesaiKerja"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:hint="Selesai" />
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:drawableRight="@drawable/icon_jam"
+                    android:text="Selesai" />
 
-                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
 
@@ -273,22 +266,17 @@
                     android:layout_weight="1"
                     android:text="Jam Istirahat" />
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center">
 
-                    <EditText
-                        android:id="@+id/et_mulaistirahat"
+                <TextView
+                    android:id="@+id/tv_mulaistirahat"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:ems="10"
-                        android:hint="Mulai" />
+                    android:drawableLeft="@drawable/icon_jam"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:text="Mulai" />
 
-                </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -299,22 +287,16 @@
                     android:text="-"
                     android:textSize="20sp" />
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center">
-
-                    <EditText
-                        android:id="@+id/et_selesaistirahat"
+                <TextView
+                    android:id="@+id/tv_selesaistirahat"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:ems="10"
-                        android:hint="Selesai" />
+                    android:text="Selesai"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:drawableRight="@drawable/icon_jam" />
 
-                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
