--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -61,22 +61,31 @@
 
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tl_namaSup_terimaPart"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <LinearLayout
+                android:id="@+id/ly_namaSup_terimaPart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp">
+                android:orientation="horizontal"
+                android:layout_margin="10dp">
 
-                <EditText
-                    android:id="@+id/txtNamaSupplier"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="NAMA SUPPLIER"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
+                    android:text="NAMA SUPPLIER"
+                    android:textColor="@color/red_900"
+                    android:textStyle="bold"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/txtNamaSupplier"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_contact_phone"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
 
             <android.support.design.widget.TextInputLayout
