--- a/app/src/main/res/layout/activity_komisi_jasa_lain_.xml
+++ b/app/src/main/res/layout/activity_komisi_jasa_lain_.xml
@@ -2,8 +2,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,18 +10,18 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_rekening"
+                android:id="@+id/recyclerView_komisiJasaLain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_rekening"
-                android:padding="10dp" />
-
+                android:padding="10dp"
+                tools:listitem="@layout/item_komisi_jasa_lain" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
@@ -34,14 +32,17 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_rekening"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:id="@+id/toolbar_komisiJasaLain"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_tambah_rekening"
+        android:id="@+id/fab_tambah_komisiJasaLain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -49,5 +50,6 @@
         android:visibility="visible"
         app:backgroundTint="@color/blue_900"
         app:srcCompat="@android:drawable/ic_input_add" />
+
 
 </android.support.design.widget.CoordinatorLayout>
