--- a/app/src/main/res/layout/activity_komisi_layanan_.xml
+++ b/app/src/main/res/layout/activity_komisi_layanan_.xml
@@ -2,8 +2,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,33 +10,33 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-        <FrameLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_layanan"
+                android:id="@+id/recyclerView_komisiLayanan"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_layanan"/>
-        </FrameLayout>
+                android:padding="10dp"
+                tools:listitem="@layout/item_komisi_layanan" />
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_layanan"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:id="@+id/toolbar_komisiLayanan"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:minHeight="?attr/actionBarSize"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            android:layout_height="?attr/actionBarSize" />
 
         <RelativeLayout
             android:id="@+id/search_layout"
@@ -55,28 +53,20 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_shadow_left"
                 android:textAlignment="center"
-                android:layout_gravity="center"
-                android:hint="Cari Layanan">
+                android:layout_gravity="center">
 
                 <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_cariLayanan"
+                    android:id="@+id/et_namaLayanan_komisiLayanan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableRight="@android:drawable/ic_menu_search"
+                    android:hint="Cari Nama Layanan"
                     android:inputType="text"
+                    android:textAlignment="center"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/grey_80"
                     android:textColorHint="@color/grey_80" />
-
-                <ProgressBar
-                    android:id="@+id/pb_tv_cariPart"
-                    style="?android:attr/progressBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|right"
-                    android:layout_marginRight="5dp"
-                    android:visibility="gone"/>
 
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
@@ -84,8 +74,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_tambah_layanan"
+        android:id="@+id/fab_tambah_komisiLayanan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
