--- a/app/src/main/res/layout/activity_spot_discount_.xml
+++ b/app/src/main/res/layout/activity_spot_discount_.xml
@@ -65,11 +65,10 @@
                     android:drawableRight="@android:drawable/ic_menu_search"
                     android:hint="Nama Pelanggan"
                     android:inputType="text"
-                    android:textAlignment="center"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/grey_80"
-                    android:textColorHint="@android:color/darker_gray" />
+                    android:textColorHint="@color/grey_80" />
 
             </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
