--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -97,6 +97,7 @@
                         android:layout_height="wrap_content"
                         android:hint="DISCOUNT PART"
                         android:inputType="number"
+                        android:maxLength="5"
                         android:maxLines="1" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -112,6 +113,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="DISCOUNT JASA"
+                        android:maxLength="5"
                         android:inputType="number"
                         android:maxLines="1" />
 
@@ -119,24 +121,31 @@
 
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/et_tglEffect_disc"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="TANGGAL EFEKTIVE"
-                    android:inputType="date"
-                    android:maxLines="1" />
+                    android:text="TANGGAL EFEKTIVE"
+                    android:layout_weight="1"
+                    android:textStyle="bold" />
 
-            </android.support.design.widget.TextInputLayout>
+                <TextView
+                    android:id="@+id/tv_tglEffect_discPart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/icon_tanggal"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <CheckBox
                 android:id="@+id/cb_mssg_discPart"
