--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -197,6 +197,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
+                    android:visibility="gone"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal">
