--- a/app/src/main/res/layout/activity_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_lokasi_part.xml
@@ -56,38 +56,38 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-        <RelativeLayout
-            android:id="@+id/search_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            android:background="@color/colorPrimary"
-            android:padding="5dp">
+        <!--        <RelativeLayout-->
+        <!--            android:id="@+id/search_layout"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_below="@+id/toolbar"-->
+        <!--            android:background="@color/colorPrimary"-->
+        <!--            android:padding="5dp">-->
 
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border_shadow_left"
-                android:layout_gravity="center">
+        <!--            <android.support.design.widget.TextInputLayout-->
+        <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:background="@drawable/border_shadow_left"-->
+        <!--                android:layout_gravity="center">-->
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_cariLokasiPart"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:drawableRight="@android:drawable/ic_menu_search"
-                    android:gravity="left|center"
-                    android:hint="Cari Part"
-                    android:textColor="@color/grey_80"
-                    android:textColorHint="@color/grey_80"
-                    android:padding="10dp" />
+        <!--                <com.rkrzmail.srv.NikitaAutoComplete-->
+        <!--                    android:id="@+id/et_cariLokasiPart"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:maxLines="1"-->
+        <!--                    android:inputType="text"-->
+        <!--                    android:singleLine="true"-->
+        <!--                    android:drawableRight="@android:drawable/ic_menu_search"-->
+        <!--                    android:gravity="left|center"-->
+        <!--                    android:hint="Cari Part"-->
+        <!--                    android:textColor="@color/grey_80"-->
+        <!--                    android:textColorHint="@color/grey_80"-->
+        <!--                    android:padding="10dp" />-->
 
-            </android.support.design.widget.TextInputLayout>
-        </RelativeLayout>
+        <!--            </android.support.design.widget.TextInputLayout>-->
+        <!--        </RelativeLayout>-->
 
     </android.support.design.widget.AppBarLayout>
 
