--- a/app/src/main/res/layout/activity_terima_part.xml
+++ b/app/src/main/res/layout/activity_terima_part.xml
@@ -46,38 +46,38 @@
 
             </android.support.v7.widget.Toolbar>
 
-        <RelativeLayout
-            android:id="@+id/search_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            android:background="@color/colorPrimary"
-            android:padding="5dp">
+        <!--        <RelativeLayout-->
+        <!--            android:id="@+id/search_layout"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_below="@+id/toolbar"-->
+        <!--            android:background="@color/colorPrimary"-->
+        <!--            android:padding="5dp">-->
 
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border_shadow_left"
-                android:textAlignment="center"
-                android:layout_gravity="center">
+        <!--            <android.support.design.widget.TextInputLayout-->
+        <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:background="@drawable/border_shadow_left"-->
+        <!--                android:textAlignment="center"-->
+        <!--                android:layout_gravity="center">-->
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/CariNoDO"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableRight="@android:drawable/ic_menu_search"
-                    android:hint="Cari No. DO"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAlignment="center"
-                    android:textColor="@color/grey_80"
-                    android:textColorHint="@android:color/darker_gray" />
+        <!--                <com.rkrzmail.srv.NikitaAutoComplete-->
+        <!--                    android:id="@+id/CariNoDO"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:drawableRight="@android:drawable/ic_menu_search"-->
+        <!--                    android:hint="Cari No. DO"-->
+        <!--                    android:inputType="text"-->
+        <!--                    android:maxLines="1"-->
+        <!--                    android:singleLine="true"-->
+        <!--                    android:textAlignment="center"-->
+        <!--                    android:textColor="@color/grey_80"-->
+        <!--                    android:textColorHint="@android:color/darker_gray" />-->
 
-            </android.support.design.widget.TextInputLayout>
-        </RelativeLayout>
+        <!--            </android.support.design.widget.TextInputLayout>-->
+        <!--        </RelativeLayout>-->
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
