--- a/app/src/main/res/layout/find_nama_.xml
+++ b/app/src/main/res/layout/find_nama_.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
         app:cardCornerRadius="6dp"
-        app:cardElevation="2dp"
+        app:cardElevation="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -21,6 +21,7 @@
                 android:id="@+id/tv_find_cari_namaPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:text="NAMA PART"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_80"
