--- a/app/src/main/res/menu/menu_part.xml
+++ b/app/src/main/res/menu/menu_part.xml
@@ -2,11 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.rkrzmail.oto.MainActivity">
+
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
         android:orderInCategory="100"
-        android:title="Setting"
+        android:title="Search"
         app:showAsAction="always" />
 
 </menu>
